crates/core/src/commands/snapshots/rustic_core__commands__forget__tests__keep-hourly20.snap
---
source: crates/core/src/commands/forget.rs
expression: result
---
ForgetResult([
  ("2016-01-18T13:02:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-12T22:08:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-12T22:02:03+01:00", false, []),
  ("2016-01-09T22:02:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-08T21:02:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-07T11:02:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-06T09:02:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-05T10:02:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-04T17:23:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-04T13:30:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-04T13:28:03+01:00", false, []),
  ("2016-01-04T13:24:03+01:00", false, []),
  ("2016-01-04T13:23:03+01:00", false, []),
  ("2016-01-04T12:23:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-04T11:23:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-03T08:02:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-01T08:08:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-01T02:03:03+01:00", true, [
    "hourly",
  ]),
  ("2016-01-01T02:02:03+01:00", false, []),
  ("2015-11-22T11:20:30+01:00", true, [
    "hourly",
  ]),
  ("2015-11-21T11:20:30+01:00", true, [
    "hourly",
  ]),
  ("2015-11-20T11:20:30+01:00", true, [
    "hourly",
  ]),
  ("2015-11-18T11:20:30+01:00", true, [
    "hourly",
  ]),
  ("2015-11-15T11:20:30+01:00", true, [
    "hourly",
  ]),
  ("2015-11-13T11:20:30+01:00", true, [
    "hourly",
  ]),
  ("2015-11-12T11:20:30+01:00", false, []),
  ("2015-11-10T11:20:30+01:00", false, []),
  ("2015-11-08T11:20:30+01:00", false, []),
  ("2015-10-22T12:20:30+02:00", false, []),
  ("2015-10-22T12:20:30+02:00", false, []),
  ("2015-10-22T12:20:30+02:00", false, []),
  ("2015-10-22T12:20:30+02:00", false, []),
  ("2015-10-20T12:20:30+02:00", false, []),
  ("2015-10-11T12:20:30+02:00", false, []),
  ("2015-10-10T12:20:30+02:00", false, []),
  ("2015-10-09T12:20:30+02:00", false, []),
  ("2015-10-08T12:20:30+02:00", false, []),
  ("2015-10-06T12:20:30+02:00", false, []),
  ("2015-10-05T12:20:30+02:00", false, []),
  ("2015-10-02T12:20:30+02:00", false, []),
  ("2015-10-01T12:20:30+02:00", false, []),
  ("2015-09-22T12:20:30+02:00", false, []),
  ("2015-09-20T12:20:30+02:00", false, []),
  ("2015-09-11T12:20:30+02:00", false, []),
  ("2015-09-10T12:20:30+02:00", false, []),
  ("2015-09-09T12:20:30+02:00", false, []),
  ("2015-09-08T12:20:30+02:00", false, []),
  ("2015-09-06T12:20:30+02:00", false, []),
  ("2015-09-05T12:20:30+02:00", false, []),
  ("2015-09-02T12:20:30+02:00", false, []),
  ("2015-09-01T12:20:30+02:00", false, []),
  ("2015-08-22T12:20:30+02:00", false, []),
  ("2015-08-21T12:20:30+02:00", false, []),
  ("2015-08-20T12:20:30+02:00", false, []),
  ("2015-08-18T12:20:30+02:00", false, []),
  ("2015-08-15T12:20:30+02:00", false, []),
  ("2015-08-13T12:20:30+02:00", false, []),
  ("2015-08-12T12:20:30+02:00", false, []),
  ("2015-08-10T12:20:30+02:00", false, []),
  ("2015-08-08T12:20:30+02:00", false, []),
  ("2014-11-22T11:20:30+01:00", false, []),
  ("2014-11-21T11:20:30+01:00", false, []),
  ("2014-11-20T11:20:30+01:00", false, []),
  ("2014-11-18T11:20:30+01:00", false, []),
  ("2014-11-15T11:20:30+01:00", false, []),
  ("2014-11-13T11:20:30+01:00", false, []),
  ("2014-11-12T11:20:30+01:00", false, []),
  ("2014-11-10T11:20:30+01:00", false, []),
  ("2014-11-08T11:20:30+01:00", false, []),
  ("2014-10-22T12:20:30+02:00", false, []),
  ("2014-10-20T12:20:30+02:00", false, []),
  ("2014-10-11T12:20:30+02:00", false, []),
  ("2014-10-10T12:20:30+02:00", false, []),
  ("2014-10-09T12:20:30+02:00", false, []),
  ("2014-10-08T12:20:30+02:00", false, []),
  ("2014-10-06T12:20:30+02:00", false, []),
  ("2014-10-05T12:20:30+02:00", false, []),
  ("2014-10-02T12:20:30+02:00", false, []),
  ("2014-10-01T12:20:30+02:00", false, []),
  ("2014-09-22T12:20:30+02:00", false, []),
  ("2014-09-20T12:20:30+02:00", false, []),
  ("2014-09-11T12:20:30+02:00", false, []),
  ("2014-09-10T12:20:30+02:00", false, []),
  ("2014-09-09T12:20:30+02:00", false, []),
  ("2014-09-08T12:20:30+02:00", false, []),
  ("2014-09-06T12:20:30+02:00", false, []),
  ("2014-09-05T12:20:30+02:00", false, []),
  ("2014-09-02T12:20:30+02:00", false, []),
  ("2014-09-01T12:20:30+02:00", false, []),
  ("2014-08-22T12:20:30+02:00", false, []),
  ("2014-08-21T12:20:30+02:00", false, []),
  ("2014-08-20T12:20:30+02:00", false, []),
  ("2014-08-18T12:20:30+02:00", false, []),
  ("2014-08-15T12:20:30+02:00", false, []),
  ("2014-08-13T12:20:30+02:00", false, []),
  ("2014-08-12T12:20:30+02:00", false, []),
  ("2014-08-10T12:20:30+02:00", false, []),
  ("2014-08-08T12:20:30+02:00", false, []),
])
